--- a/index.html
+++ b/index.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Черный треугольник</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+
+<style>
+
+body {background-color: #1c1c1c}
+</style>
 <body>
-<h1>Поддержать автора:</h1>
+<p style="font-family:'DejaVu Sans Mono'; color:White; font-size:30px;">Поддержать автора:</h1>
 
-<p>QIWI https://donate.qiwi.com/payin/Black_Triangle</p>
+<p style="color:White;">=======================</p>
 
-<a href="https://donate.qiwi.com/payin/Black_Triangle">QIWI</a>
+<a style="color: #ff00ff;" href="https://donate.qiwi.com/payin/Black_Triangle">QIWI</a>
 
-<p>YouTube спонсорство АРЕСТОВАН!(не использовать!)</p>
+<p style="color:White;">=======================</p>
 
-<p>Donation Alerts АРЕСТОВАН!(не использовать!)</p>
+<p style="font-family:'DejaVu Sans Mono'; color:White;">YouTube спонсорство АРЕСТОВАН!(не использовать!)</p>
 
-<p>DonatePay АРЕСТОВАН!(не использовать!)</p>
+<p style="color:White;">Donation Alerts АРЕСТОВАН!(не использовать!)</p>
 
-<p>Boosty АРЕСТОВАН!(не использовать!)</p>
+<p style="color:White;">DonatePay АРЕСТОВАН!(не использовать!)</p>
 
-<p>Bitcoin: 1AWBMoeV8UEybQi4QrQMmeFX1sXvRLDeCn</p>
+<p style="color:White;">Boosty АРЕСТОВАН!(не использовать!)</p>
 
-<p>Ethereum: 0xB151c82A264eF0EA848c120444173658BFA18Cf9</p>
+<p style="color:White;">=======================</p>
 
-<p>DASH: XcNtFGW1ydGLudvTPWoBvPZZxG844EvksR</p>
+<p style="color:White;"><b>Bitcoin: </b>1AWBMoeV8UEybQi4QrQMmeFX1sXvRLDeCn</p>
 
-<p>Zcash: t1hCJwasRozdkoaK9HLpngoEVPQhEZpxdFT</p>
+<p style="color:White;"><b>Ethereum: </b>0xB151c82A264eF0EA848c120444173658BFA18Cf9</p>
 
-<p>Monero: 41iNuQsc6GjZofH3XkKwNYVSXVsrjipfVjjNR3nbsL5XjJMFTfykW1T6CkYz1StdXH2t8dhnjUTT9FwEPpbsFVxjHuuYabQ</p>
+<p style="color:White;"><b>DASH: </b>XcNtFGW1ydGLudvTPWoBvPZZxG844EvksR</p>
 
-<p>Litecoin: LNpw5QS5fvH1NW5AMp35zzMs1FYKuAUuPP</p>
+<p style="color:White;"><b>Zcash: </b>t1hCJwasRozdkoaK9HLpngoEVPQhEZpxdFT</p>
 
-<p>Bitcoin Cash: qrs29h849m9vj02ljd2utf6g7e7hxnntqvkhz8r8u3</p>
+<p style="color:White;"><b>Monero: </b>41iNuQsc6GjZofH3XkKwNYVSXVsrjipfVjjNR3nbsL5XjJMFTfykW1T6CkYz1StdXH2t8dhnjUTT9FwEPpbsFVxjHuuYabQ</p>
 
-<p>Ethereum Classic: 0xc20a61Ec5765aC0059D6e85f069B440889EBfcC5</p>
+<p style="color:White;"><b>Litecoin: </b>LNpw5QS5fvH1NW5AMp35zzMs1FYKuAUuPP</p>
 
-<p>Dogecoin: DMsvAD4DVcq6ityXUGj2Bj6v4EcQiLJymi</p>
+<p style="color:White;"><b>Bitcoin Cash: </b>qrs29h849m9vj02ljd2utf6g7e7hxnntqvkhz8r8u3</p>
 
-<p>Tether: 0xB151c82A264eF0EA848c120444173658BFA18Cf9</p>
+<p style="color:White;"><b>Ethereum Classic: </b>0xc20a61Ec5765aC0059D6e85f069B440889EBfcC5</p>
 
-<p>Ripple: r4jtKy6KojHKSzEmE2iMSa5DUUv76JfDwM</p>
+<p style="color:White;"><b>Dogecoin: </b>DMsvAD4DVcq6ityXUGj2Bj6v4EcQiLJymi</p>
 
-<p>Cardano: addr1qyamnm0zmqq9yk7ng0ss5px3x6fjfevzp2mtrslh4rpv4qfmh8k79kqq2fdaxslppgzdzd5nynjcyz4kk8pl02xze2qs77ky64</p>
+<p style="color:White;"><b>Tether: </b>0xB151c82A264eF0EA848c120444173658BFA18Cf9</p>
 
-<p>Polkadot: 1ZeiWfUu4xrKQMpZ9DTQiZYCb1AP19jDTPYaCUv4iTusWUH</p>
+<p style="color:White;"><b>Ripple: </b>r4jtKy6KojHKSzEmE2iMSa5DUUv76JfDwM</p>
 
-<p>Stellar: GCBW6CDMFKGGE72O727FGWADQNSYAF6DOSERQUQPBBYHIRGOKNH3AH5Y</p>
+<p style="color:White;"><b>Cardano: </b>addr1qyamnm0zmqq9yk7ng0ss5px3x6fjfevzp2mtrslh4rpv4qfmh8k79kqq2fdaxslppgzdzd5nynjcyz4kk8pl02xze2qs77ky64</p>
 
-<p>VeChain: 0xDb8EA6816DE076872a2a35eB17dF6891a6dA15Db</p>
+<p style="color:White;"><b>Polkadot: </b>1ZeiWfUu4xrKQMpZ9DTQiZYCb1AP19jDTPYaCUv4iTusWUH</p>
 
-<p>BitTorrent: TPgXLUXMtaMqoGr7zf6cAGVgZo4bbQWfkf</p>
+<p style="color:White;"><b>Stellar: </b>GCBW6CDMFKGGE72O727FGWADQNSYAF6DOSERQUQPBBYHIRGOKNH3AH5Y</p>
 
-<p>NEM: NDG6TVBWEYC5MJ4FLAQMYKICM7J36JSLU6FD23J3</p>
+<p style="color:White;"><b>VeChain: </b>0xDb8EA6816DE076872a2a35eB17dF6891a6dA15Db</p>
 
-<p>Tron: TPgXLUXMtaMqoGr7zf6cAGVgZo4bbQWfkf</p>
+<p style="color:White;"><b>BitTorrent: </b>TPgXLUXMtaMqoGr7zf6cAGVgZo4bbQWfkf</p>
+
+<p style="color:White;"><b>NEM: </b>NDG6TVBWEYC5MJ4FLAQMYKICM7J36JSLU6FD23J3</p>
+
+<p style="color:White;"><b>Tron: </b>TPgXLUXMtaMqoGr7zf6cAGVgZo4bbQWfkf</p>
 </body>
 </html>
+
