--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {background-color: #1c1c1c}
 
 <p style="color:White;">=======================</p>
 
-<a style="color: #ff00ff;" href="https://donate.qiwi.com/payin/Black_Triangle">QIWI</a>
+<a style="color: #ff00ff;" href="https://donate.qiwi.com/payin/Black_Triangle">QIWI и Банковские карты</a>
 
 <p style="color:White;">=======================</p>
 
