--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ body {background-color: #1c1c1c}
 
 <p style="color:White;">=======================</p>
 
-<p style="font-family:'DejaVu Sans Mono'; color:White;">YouTube спонсорство АРЕСТОВАН!(не использовать!)</p>
+<a style="color: #ff00ff;" href="https://www.youtube.com/channel/UCZ26MoNJKaGXFQWKuGVzmAg/join">YouTube спонсорство</a>
+
+<p style="color:White;">=======================</p>
 
 <p style="color:White;">Donation Alerts АРЕСТОВАН!(не использовать!)</p>
 
