--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ body {background-color: #1c1c1c}
 <p style="color:White;"><b>NEM: </b>NDG6TVBWEYC5MJ4FLAQMYKICM7J36JSLU6FD23J3</p>
 
 <p style="color:White;"><b>Tron: </b>TPgXLUXMtaMqoGr7zf6cAGVgZo4bbQWfkf</p>
+
+<p style="color:White;"><b>TONcoin: </b>0xB151c82A264eF0EA848c120444173658BFA18Cf9</p>
 </body>
 </html>
 
