--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ body {background-color: #1c1c1c}
 
 <a style="color: #ff00ff;" href="https://donate.qiwi.com/payin/Black_Triangle">QIWI и Банковские карты</a>
 
+<p style="color:White;">=======================</p>
+
 <a style="color: #ff00ff;" href="https://yoomoney.ru/to/4100118286427877">Юmoney</a>
 
 <p style="color:White;">=======================</p>
