--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@ body {background-color: #1c1c1c}
 
 <p style="color:White;">=======================</p>
 
-<a style="color: #ff00ff;" href="https://donate.qiwi.com/payin/Black_Triangle">QIWI и Банковские карты</a>
-
-<p style="color:White;">=======================</p>
-
-<a style="color: #ff00ff;" href="https://yoomoney.ru/to/4100118286427877">Юmoney</a>
+<a style="color: #ff00ff;" href="https://yoomoney.ru/to/4100118286427877">Юmoney и Банковские карты</a>
 
 <p style="color:White;">=======================</p>
 
@@ -31,6 +27,8 @@ body {background-color: #1c1c1c}
 <p style="color:White;">DonatePay АРЕСТОВАН!(не использовать!)</p>
 
 <p style="color:White;">Boosty АРЕСТОВАН!(не использовать!)</p>
+
+<p style="color:White;">QIWI АРЕСТОВАН!(не использовать!)</p>
 
 <p style="color:White;">=======================</p>
 
